- Started making site responsive - Fixed unalignment on Job Overview page for gender selection - Started making Unit Overview page mobile friendly

--- a/FinalFantasyTacticsPartyBuilder/Content/Site.css
+++ b/FinalFantasyTacticsPartyBuilder/Content/Site.css
@@ -34,7 +34,7 @@ img {
 #party-overview-container {
     width: 100%;
     height: 100%;
-    padding: 60px;
+    padding: 1vw;
 }
 
 #party-builder-container {
@@ -130,12 +130,12 @@ img {
     }
 
 .menu {
-    height: 80%;
+    /*height: 80%;*/
     width: 100%;
     background-image: url(Images/menu_background.png);
     border: 2px solid black;
     box-shadow: black 3px 3px 3px;
-    font: 50px 'Altima';
+    font: 2.5vw 'Altima';
 }
 
     .menu ul {
@@ -201,11 +201,13 @@ img {
 
     .job-status-hp-container img {
         height:25px;
+        position:relative;
         margin-right: -4px;
     }
 
         .job-status-hp-container img:first-child {
             position: relative;
+            width:100px;
         }
 
 .job-status-mp-container {
@@ -216,6 +218,7 @@ img {
 
     .job-status-mp-container img {
         height:25px;
+        position:relative;
         margin-right: -4px;
     }
 
@@ -598,30 +601,36 @@ img {
 }
 
 #job-details-container {
-    margin-left:35%;
-    margin-right:1%;
-    float:left;
-    width: 20%;
-    height: 10%;
-    max-width: 280px;
+    width:15vw;
+    margin-left:30vw;
+    margin-right:1vw;
+}
+
+#job-details-container, #job-gender-container, #job-confirm-container {
+    display:inline-block;
+    position:relative;
+    text-align:center;
+    vertical-align:middle;
+    padding:0.5vw;
 }
 
 #job-details-level-container {
-    width: 30%;
-    margin: -3% 35% 0 35%;
+    width: 50%;
+    height:40%;
+    margin: auto;
 }
 
-    #job-details-level-container img {
+    #job-details-level-container img {  
         width: auto;
-        height: 20px;
+        height: 2vh;
     }
 
 #job-name {
-    display:block;
     text-align:center;
 }
 
 .fft-button {
+    position:relative;
     padding:1%;
     border: 5px outset;
 }
@@ -633,49 +642,26 @@ img {
 .fft-button:hover:before {
     content: url(Images/menu_cursor.png);
     position: absolute;
-    left:-5%;
-    top: -10%;
+    left:-2vw;
 }
 
 .fft-button[selected=true] {
     background-color:rgba(0, 0, 0, 0.10);
-    border: 5px inset;
+    border: 0.25vw inset;
 }
 
 .fft-button[selected=false] {
-    border: 5px outset;
+    background-color:rgba(0, 0, 0, 0.00);
+    border: 0.25vw outset;
 }
 
 #job-gender-container {
-    float: left;
-    position:relative;
-    /*padding: 1.5% 2%;*/
-    text-align:center;
-    line-height:175%;
-    height: 10%;
-    max-width: 440px;
+    width:25vw;
 }
 
-#job-confirm-container {
-    float:left;
-    position:relative;
-    margin-left:1%;
-    width:10%;
-    height:10%;
-    text-align:center;
-    line-height:175%
-}
-
-#gender-male-button:hover:before {
-    content: url(Images/menu_cursor.png);
-    position:absolute;
-    left:0px;
-}
-
-#gender-female-button:hover:before {
-    content: url(Images/menu_cursor.png);
-    position:absolute;
-    left:40%;
+#job-confirm-container {    
+    margin-left:1vw;
+    width:15vw;
 }
 
 #job-modifier-chart-container, #job-growth-chart-container  {
@@ -1222,4 +1208,40 @@ img {
 
 #ability-details-ability-selection {
     width: 100%;
+}
+
+@media screen and (max-width: 600px) and (min-width: 300px) {
+    .menu {
+        font: 10vw 'Altima';
+    }
+
+    .unit-container {
+        position: relative;
+        float: left;
+        width: 80%;
+        margin-left:15%;
+        margin-bottom:5%;
+    }
+
+    .job-status-container {
+    width: 100%;
+    height: 40%;
+}
+
+.job-status-hp-container, .job-status-mp-container  {
+    position: relative;
+    margin-left:20%;
+    height: 50%;
+    width: 80%;
+}
+
+.menu-container {
+    position:absolute;
+    left:0;
+    top:10%;
+    width: 55%;
+    height: auto;
+    z-index: 10;
+}
+
 }
